Lab-13/End/GiftShop/Istio-Manifests/GiftShop-Ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - <username>-giftshopapi.<user's domain>
    - <username>-giftshopui.<user's domain>
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - <username>-giftshopapi.<user's domain>
    - <username>-giftshopui.<user's domain>
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <username>-giftshopapi
spec:
  hosts:
  - <username>-giftshopapi.<user's domain>
  gateways:
  - demo-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /swagger
    - uri:
        prefix: /api
    route:
    - destination:
        host: giftshopapi
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <username>-giftshopui
spec:
  hosts:
  - <username>-giftshopui.<user's domain>
  gateways:
  - demo-ingress-gateway
  http:
  - match:
    - headers:
        continent:
          exact: asia
    route:
    - destination:
        host: giftshopui
        subset: v4
  - route:
    - destination:
        host: giftshopui
        subset: v6
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sreeni-giftshopui
spec:
  host: giftshopui
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v4
    labels:
      version: v4
  - name: v6
    labels:
      version: v6
---
